--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@truffle/hdwallet-provider": "^1.7.0",
-    "dotenv": "^10.0.0",
+    "@truffle/hdwallet-provider": "^1.5.1",
     "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.2",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "solc": "^0.4.17",
     "web3": "^1.6.0"
   }
