--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    
+    "test": "mocha",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
